@@ -334,6 +334,7 @@ b398e909ed35fda9e17cc0882bdb543ffef08d59 assets\createbigcannons\models\item\inc
 667e64b235e2b23264b0ac77c8a14a932750923b assets\createbigcannons\blockstates\traffic_cone.json
 b04c05fac65e945d737d51d914e8f9b2c03f029e assets\createbigcannons\models\block\unbored_steel_screw_breech.json
 e1ef289c6470b89c87eff0225fbc171909a92d3c assets\createbigcannons\blockstates\thick_steel_cannon_chamber.json
+288a99c8672cbdca4537573c97668ed367facf8c data\createbigcannons\tags\items\autocannon_ammo_containers.json
 70b5d331a91aa5ff9df02ef384240c7be6e42da8 data\createbigcannons\tags\blocks\thick_tubing.json
 e5edd41ecce1151ca47065659c4099546b36a0a7 assets\createbigcannons\models\item\nethersteel_screw_lock.json
 a5a8b68d5b4903afc2b99a5a1d5a76c90075fcec assets\createbigcannons\models\item\unbored_bronze_cannon_chamber.json
@@ -379,11 +380,13 @@ fa3dcbb84668a6ec138e6e98b4e1fb8d65c7889b data\createbigcannons\block_recipes\cas
 8d548d0a3da40f1e7c02bc5259fd7b05050fed58 assets\createbigcannons\blockstates\cast_iron_autocannon_barrel.json
 1245e543f612ea5bab40ae58e4ba4c22c1b106f7 data\createbigcannons\tags\items\ingot_bronze.json
 0e152de919a052e37ca7a8d7f02c46f54f7040b1 assets\createbigcannons\models\block\steel_autocannon_barrel_flanged.json
+4639ddbfb3702d5668560fa13159c0a6eb5744e9 data\createbigcannons\tags\items\big_cannon_cartridges.json
 88d315e4052ef5d7e434931c3b633ab7538e6d30 assets\createbigcannons\models\block\unbored_bronze_cannon_chamber.json
 924b851ca28ea86ab3dc071a28acafeba14c85c3 assets\createbigcannons\blockstates\molten_steel.json
 45bb5932059e210f00edbeb5b929cb5cd6cda0f0 data\createbigcannons\loot_tables\blocks\sliding_breech_cast_mould.json
 236f3bc8726b5b512a7795bc4ecc66c2a9bc598b data\createbigcannons\block_recipes\built_up_steel_cannon_chamber.json
 cfed6efadb0dc8698411631f4235401e58c1b5c3 data\createbigcannons\recipes\milling\alloy_nethersteel_cast_iron.json
+0f754ebf1dd4bec306b79dd68cf1e9e029317fe3 data\createbigcannons\tags\items\fuzes.json
 3ded568d879a6f0d986594d1024df31f49a7e120 data\createbigcannons\loot_tables\blocks\cast_iron_cannon_end.json
 58ca76b36c148c84601832393c37fb67bbfcd309 data\createbigcannons\loot_tables\blocks\cast_iron_sliding_breech.json
 4836e2c3442964ac91881ec21471ccfa8ffde052 data\createbigcannons\loot_tables\boring_scrap\unbored_bronze_autocannon_barrel.json
@@ -431,6 +434,7 @@ e0712cc21a89bd56141a016e73e5d00f58224837 data\createbigcannons\advancements\reci
 b99adee851b72a5211b87c7784a063cc25e7d709 data\createbigcannons\loot_tables\blocks\very_large_nethersteel_cannon_layer.json
 b790f1b4a59c1d03b42eea96672da0c442c54e73 data\createbigcannons\loot_tables\blocks\incomplete_cast_iron_autocannon_recoil_spring.json
 a5592581e798ada854d1529bccf107f8fca4e116 assets\createbigcannons\models\item\molten_bronze_bucket.json
+b75d515595149b9e48f4af6bf4c097c68cb43e9b data\createbigcannons\tags\items\autocannon_cartridges.json
 008be0916d1514ac5d743ce7e30b66f92577ca01 assets\createbigcannons\models\block\cast_iron_autocannon_barrel_assembled.json
 14d5a44b0fe1943de18a823c9d118b5e0a65fb47 assets\createbigcannons\models\block\incomplete_bronze_autocannon_breech.json
 a6f754cdaa9d4ae445f0d493136975b929a825d7 data\createbigcannons\tags\blocks\obsidian.json
@@ -555,6 +559,7 @@ f12ac208d536c52039b210988f78528e2b610dab data\createbigcannons\loot_tables\block
 f6dd71c3acb08a3a8b1dc889e3807ccfeccbc711 data\createbigcannons\loot_tables\boring_scrap\unbored_bronze_cannon_chamber.json
 24becd2e7847af854215cab197412250de2b0c75 data\createbigcannons\recipes\mixing\congealed_nitro.json
 255b25987e936ffcecaf64a3e0cd056f895aff8e assets\createbigcannons\blockstates\bronze_sliding_breech.json
+2f9fa666b4ccfc3bc6fcb2de4d39914690583fbe data\createbigcannons\tags\items\big_cannon_projectiles.json
 beb812db6128ff79ddb89a9ce087cccc3d97118c assets\createbigcannons\models\block\unbored_medium_nethersteel_cannon_layer.json
 56a7e7829d75a59a91dbae45cd621c6b2ca1032f data\createbigcannons\block_hardness\tags\obsidian.json
 6d196922708defa4b7d3f078a7c61ab3247bd1c2 data\createbigcannons\tags\items\nugget_iron.json
@@ -562,6 +567,7 @@ ee1a8fd2ef45732c4b2118aa5cfcc1bf3f5158dd data\createbigcannons\advancements\reci
 2270973285de297277166c5b6ed6a2e5c01c2364 data\createbigcannons\recipes\compacting\iron_to_cast_iron_ingot.json
 be74eaae82c3fcdd20b165fc56c23b8b7cbba623 assets\createbigcannons\models\item\unbored_cast_iron_autocannon_barrel.json
 e67799a0ea6937a9bf222709753591cf3de726cf data\createbigcannons\advancements\recipes\createbigcannons\bag_of_grapeshot.json
+c3ac3efee8c6a237e0d6376293c19c0a9d11b48c data\createbigcannons\tags\items\big_cannon_propellant_bags.json
 2e3e2cb7aef35dafd8220a7a97564031bb88566f data\createbigcannons\advancements\recipes\createbigcannons\worm_head.json
 23c5c42e9d363c3152237e5affaaa43104b0dba8 assets\createbigcannons\models\item\timed_fuze.json
 d7d2f4bd9295c544a0f9fe0c52a0968902959fe5 assets\createbigcannons\models\item\smoke_shell.json
@@ -845,6 +851,7 @@ aa1f68a86753373a5c8f0e2f3a92179c7be19c12 assets\createbigcannons\blockstates\big
 88b35755df2b470f671a2ba9fd778a052ee00d50 data\createbigcannons\recipes\melting\melt_bronze_block.json
 f9fe3dcebd59115004ba4689d71dfec58c402309 assets\createbigcannons\models\block\molten_bronze.json
 73f8d1dbc724b2bf2f4b98f3e349b21329d012c6 data\createbigcannons\loot_tables\blocks\cast_iron_cannon_chamber.json
+e1fa683488d07e83263d3b0267b28384ac016480 data\createbigcannons\tags\items\autocannon_rounds.json
 a39127cff89f7c428602eef326265cafdf2c9765 assets\createbigcannons\models\block\bronze_cannon_barrel.json
 b5575c2f9f129cb5357eac6587134ef2b550aa71 assets\createbigcannons\blockstates\unbored_small_nethersteel_cannon_layer.json
 f46301ce3e268648597d673c3a1b69a51522fadd data\createbigcannons\block_recipes\small_nethersteel_cannon_layer.json
@@ -853,6 +860,7 @@ f46301ce3e268648597d673c3a1b69a51522fadd data\createbigcannons\block_recipes\sma
 8ab025d2904e81e9e9c1a18849e8f36844399d10 data\createbigcannons\recipes\fluid_shell.json
 d442ce9f37ef6dd99a3fe192eade24864e9fbec4 data\createbigcannons\loot_tables\blocks\steel_screw_breech.json
 6d0987a31535b747bc5048b35632ee1948240932 data\createbigcannons\block_recipes\very_large_steel_cannon_layer.json
+f4276e1b3f0c1f0e3d545c6a16b5deaedb406c73 data\createbigcannons\tags\items\spent_autocannon_casings.json
 fd833ced42ab3249311707123ccf33bf3594211c assets\createbigcannons\blockstates\medium_steel_cannon_layer.json
 e2f7828cb7fad909a67c95997fc576900f3a9532 data\createbigcannons\loot_tables\boring_scrap\unbored_bronze_autocannon_recoil_spring.json
 d1a3a08c7da1aebcfbb25dcacf52502b20a155aa data\createbigcannons\recipes\cutting\autocannon_breech_cast_mould.json
@@ -901,6 +909,7 @@ e58fd79b6cc62a2c4b0beadcaa6bc7c514b23957 assets\createbigcannons\models\item\cas
 9b6fe59770d334c46f2fce4e3e71c8c89cff624d assets\createbigcannons\models\item\basin_foundry_lid.json
 abd5fdc8d203afb3fb91b173f6b555e84e84d208 data\c\tags\fluids\molten_steel.json
 d9e6c7a4955e85b458a6803caf95b06e4cdd068e data\createbigcannons\tags\items\sheet_brass.json
+107961a4ef532d92b4019db5dabb9cd93bd47a68 data\createbigcannons\tags\items\big_cannon_propellant.json
 1eb6600536aa7ddb51c18fd065a41a6060edc4d2 data\createbigcannons\loot_tables\blocks\unbored_small_nethersteel_cannon_layer.json
 64f968567571f54d4df8b4a36bfccb0624c83f89 data\c\tags\items\nuggets\steel.json
 10a7c1c680e6b61fb5b5dd2f21ee4ed635c5f2fd data\createbigcannons\loot_tables\blocks\thick_nethersteel_cannon_chamber.json
