@@ -1,0 +1,6 @@
+{
+  "replace": false,
+  "values": [
+    "createbigcannons:autocannon_ammo_container"
+  ]
+}
