@@ -1,0 +1,6 @@
+{
+  "replace": false,
+  "values": [
+    "createbigcannons:big_cartridge"
+  ]
+}
